--- a/Dsw2025Tpi.Api/appsettings.json
+++ b/Dsw2025Tpi.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=Dsw2025TpiDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
