--- a/Dsw2025Tpi.Api/appsettings.json
+++ b/Dsw2025Tpi.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=Dsw2025TpiDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=Dsw2025TpiDb;Trusted_Connection=True;TrustServerCertificate=True;"
+
   },
 
   "Logging": {
@@ -9,5 +10,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 10
+      }
+    ]
+  },
+  "JwtSettings": {
+    "SecretKey": "ESTA_ES_UNA_CLAVE_SECRETA_LARGA_QUE_DEBERIA_SER_SEGURA",
+    "Issuer": "Dsw2025Tpi",
+    "Audience": "Dsw2025TpiUsers",
+    "ExpiryMinutes": 60
+  }
+
 }
+
