--- a/Dsw2025Tpi.Api/appsettings.json
+++ b/Dsw2025Tpi.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Dsw2025Tpi": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Dsw2025Db;Integrated Security=True;"
+  },
+  "Jwt": {
+    "Key": "3f8b2e1c-4d5a-4e6f-9a7b-2c1d8e5f6a9c-!@#QwErTyUiOp1234567890",
+    "Issuer": "Dsw2025Ej15.Api",
+    "Audience": "Dsw2025Ej15.ApiUsers",
+    "ExpireInMinutes": 60
+  }
 }
